--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -83,7 +83,9 @@
     "image": "छवि उपकरण",
     "image_desc": "छवि प्रोसेसिंग और रूपांतरण उपकरण",
     "developer": "डेवलपर उपकरण",
-    "developer_desc": "क्रॉन और ऑटोमेशन के लिए सहायक उपयोगिताएँ"
+    "developer_desc": "क्रॉन और ऑटोमेशन के लिए सहायक उपयोगिताएँ",
+    "generators": "जेनरेटर उपकरण",
+    "generators_desc": "UUID, पासवर्ड और अधिक के लिए यादृच्छिक डेटा जेनरेशन उपकरण"
   },
   "changelog": {
     "title": "चेंजलॉग",
@@ -633,6 +635,71 @@
         "title": "URL एन्कोडर/डीकोडर टूल",
         "description": "ऑनलाइन URL एन्कोडिंग और डीकोडिंग टूल। फ्रंटएंड विकास के लिए encodeURIComponent फॉर्मेट समर्थन के साथ URL पैरामीटर और विशेष कैरेक्टर एस्केपिंग को संभालें।",
         "keywords": "URL एन्कोडिंग,URL डीकोडिंग,encodeURIComponent,decodeURIComponent,URL एस्केपिंग,ऑनलाइन टूल"
+      }
+    },
+    "uuid-generator": {
+      "name": "UUID जेनरेटर",
+      "description": "UUID यूनिक आइडेंटिफायर बैच में जेनरेट करें",
+      "settings_title": "जेनरेशन सेटिंग्स",
+      "settings_desc": "UUID जेनरेशन पैरामीटर कॉन्फ़िगर करें",
+      "count_label": "जेनरेशन काउंट",
+      "count_hint": "1-1000 UUID जेनरेट कर सकते हैं",
+      "format_label": "आउटपुट फॉर्मेट",
+      "format_default": "स्टैंडर्ड फॉर्मेट (लोअरकेस डैश के साथ)",
+      "format_uppercase": "अपरकेस फॉर्मेट",
+      "format_no_dash": "नो डैश फॉर्मेट",
+      "format_no_dash_uppercase": "अपरकेस नो डैश फॉर्मेट",
+      "generate": "UUID जेनरेट करें",
+      "result_title": "जेनरेशन रिज़ल्ट",
+      "result_desc": "बैच जेनरेटेड UUID लिस्ट",
+      "result_placeholder": "जेनरेटेड UUID यहाँ दिखाई देंगे...",
+      "generated_count": "{count} UUID जेनरेट किए गए",
+      "about_title": "UUID के बारे में",
+      "about_uuid_title": "UUID क्या है",
+      "about_uuid_desc": "UUID (यूनिवर्सली यूनिक आइडेंटिफायर) एक 128-बिट यूनिक आइडेंटिफायर है जो समय और स्थान में विशिष्टता की गारंटी देता है",
+      "about_v4_title": "UUID v4 वर्जन",
+      "about_v4_desc": "यह टूल UUID v4 वर्जन का उपयोग करता है, पूरी तरह से रैंडम नंबर जेनरेशन पर आधारित अत्यंत कम टक्कर संभावना के साथ",
+      "about_format_title": "फॉर्मेट विवरण",
+      "about_format_desc": "स्टैंडर्ड फॉर्मेट 8-4-4-4-12 हेक्साडेसिमल कैरेक्टर है, अपरकेस या नो-डैश फॉर्मेट के विकल्पों के साथ",
+      "about_use_title": "उपयोग केस",
+      "about_use_desc": "डेटाबेस प्राइमरी की, डिस्ट्रिब्यूटेड सिस्टम ID, फाइल नामकरण, API टोकन और अन्य परिदृश्यों के लिए उपयुक्त",
+      "introduction": "UUID जेनरेटर एक पेशेवर बैच यूनिक आइडेंटिफायर जेनरेशन टूल है जो UUID v4 स्टैंडर्ड पर आधारित क्रिप्टोग्राफिक रूप से सुरक्षित रैंडम नंबर जेनरेशन एल्गोरिदम का उपयोग करता है। UUID (यूनिवर्सली यूनिक आइडेंटिफायर) डिस्ट्रिब्यूटेड सिस्टम में व्यापक रूप से उपयोग किया जाता है, केंद्रीकृत समन्वय के बिना वैश्विक विशिष्टता की गारंटी देता है। स्टैंडर्ड, अपरकेस और नो-डैश फॉर्मेट सहित कई आउटपुट फॉर्मेट का समर्थन करता है। यह टूल एक बार में 1000 UUID तक जेनरेट कर सकता है।",
+      "features": [
+        "🎲 पूर्ण रैंडम जेनरेशन के साथ UUID v4 स्टैंडर्ड पर आधारित",
+        "🔐 क्रिप्टोग्राफिक रूप से सुरक्षित रैंडम नंबर जेनरेटर का उपयोग करता है",
+        "📊 1-1000 UUID की बैच जेनरेशन",
+        "🎨 कई आउटपुट फॉर्मेट का समर्थन: स्टैंडर्ड, अपरकेस, नो-डैश",
+        "📋 सभी UUID को क्लिपबोर्ड में वन-क्लिक कॉपी करें",
+        "💾 टेक्स्ट फाइल के रूप में एक्सपोर्ट करने का समर्थन",
+        "⚡ मिलीसेकंड में पूर्ण उच्च-प्रदर्शन जेनरेशन",
+        "🔒 सुरक्षा सुनिश्चित करते हुए स्थानीय जेनरेशन"
+      ],
+      "faq": [
+        {
+          "question": "UUID क्या है? इसका उपयोग क्यों करें?",
+          "answer": "UUID (यूनिवर्सली यूनिक आइडेंटिफायर) एक 128-बिट आइडेंटिफायर है जो समय और स्थान में विशिष्टता रखता है। UUID का उपयोग करने के मुख्य लाभ: 1) केंद्रीय समन्वय के बिना विशिष्टता की गारंटी; 2) डिस्ट्रिब्यूटेड सिस्टम के लिए उपयुक्त; 3) अत्यंत कम टक्कर संभावना (~1/2^122); 4) ऑफलाइन जेनरेट किया जा सकता है; 5) निर्माण समय और स्थान की जानकारी प्रकट नहीं करता।"
+        },
+        {
+          "question": "UUID v4 क्या है? यह अन्य वर्जन से कैसे अलग है?",
+          "answer": "UUID के कई वर्जन हैं, v4 पूरी तरह से रैंडम नंबर आधारित है। अंतर: v1 टाइमस्टैम्प और MAC एड्रेस पर आधारित है (गोपनीयता लीक हो सकती है), v3/v5 नेमस्पेस और नेम हैश पर आधारित है, v4 शुद्ध रूप से रैंडम है (सबसे अधिक उपयोग किया जाता है)। v4 का लाभ सादगी, सुरक्षा, हार्डवेयर निर्भरता नहीं है।"
+        },
+        {
+          "question": "UUID टक्कर संभावना कितनी कम है?",
+          "answer": "UUID v4 के 2^122 संभावित मान हैं (~5.3×10^36)। सैद्धांतिक रूप से, 1 बिलियन UUID जेनरेट करने पर टक्कर की संभावना लगभग 1/2^92 है, जो ब्रह्मांडीय किरणों के कारण कंप्यूटर त्रुटि की संभावना से बहुत कम है।"
+        },
+        {
+          "question": "UUID किन परिदृश्यों के लिए उपयुक्त है?",
+          "answer": "UUID व्यापक रूप से उपयोग किया जाता है: 1) डेटाबेस प्राइमरी की, विशेष रूप से डिस्ट्रिब्यूटेड डेटाबेस; 2) डिस्ट्रिब्यूटेड सिस्टम में यूनिक आइडेंटिफायर; 3) फाइल और रिसोर्स नामकरण; 4) API टोकन और सेशन ID; 5) मैसेज क्यू में मैसेज ID; 6) माइक्रोसर्विसेज आर्किटेक्चर में रिक्वेस्ट ट्रेसिंग।"
+        },
+        {
+          "question": "UUID फॉर्मेट में क्या अंतर हैं? कैसे चुनें?",
+          "answer": "स्टैंडर्ड फॉर्मेट (8-4-4-4-12 डैश के साथ) सबसे आम है, डेटाबेस स्टोरेज और API ट्रांसमिशन के लिए उपयुक्त; अपरकेस फॉर्मेट कुछ सिस्टम में कॉन्स्टेंट के रूप में उपयोग किया जाता है; नो-डैश फॉर्मेट अधिक कॉम्पैक्ट है, URL और फाइलनेम के लिए उपयुक्त।"
+        }
+      ],
+      "meta": {
+        "title": "UUID जेनरेटर",
+        "description": "ऑनलाइन UUID बैच जेनरेशन टूल। ग्लोबली यूनिक आइडेंटिफायर तेजी से जेनरेट करने के लिए कई आउटपुट फॉर्मेट के साथ UUID v4 स्टैंडर्ड का समर्थन करता है।",
+        "keywords": "UUID जेनरेटर,यूनिक आइडेंटिफायर,UUID v4,बैच जेनरेशन,GUID,ऑनलाइन टूल"
       }
     },
     "password-generator": {
