--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -68,8 +68,8 @@
   "categories": {
     "json_tools": "JSON 实用工具",
     "json_tools_desc": "面向 JSON 的格式化、对比与生成助手",
-    "json_converters": "转换器",
-    "json_converters_desc": "在 JSON 与其它格式之间快速转换",
+    "json_converters": "格式转换器",
+    "json_converters_desc": "JSON与CSV、YAML、XML格式双向互转",
     "json-tools": "JSON 实用工具",
     "json-converters": "转换器",
     "text": "文本工具",
@@ -149,15 +149,23 @@
       }
     },
     "json-to-csv": {
-      "name": "JSON转CSV",
-      "description": "将JSON数据转换为CSV格式",
+      "name": "JSON⇄CSV转换器",
+      "description": "JSON与CSV格式互相转换",
       "placeholder": "请输入JSON数据（对象数组或单个对象）...",
+      "csv_placeholder": "请输入CSV数据（第一行为表头）...",
       "invalid": "无效的JSON格式",
+      "invalid_csv": "无效的CSV格式",
       "invalid_format": "请输入有效的JSON对象或对象数组",
       "input_title": "输入 JSON",
+      "input_desc": "输入要转换的 JSON 数据",
+      "csv_input_title": "输入 CSV",
+      "csv_input_desc": "输入要转换的 CSV 数据",
       "output_title": "输出 CSV",
       "output_desc": "转换后的 CSV 数据",
+      "json_output_title": "输出 JSON",
+      "json_output_desc": "转换后的 JSON 数据",
       "output_placeholder": "转换后的 CSV 将显示在这里...",
+      "json_output_placeholder": "转换后的 JSON 将显示在这里...",
       "usage_title": "使用说明",
       "rows_columns": "{rows} 行 × {columns} 列",
       "usage_array_format": "• 支持 JSON 对象数组格式：",
@@ -168,13 +176,13 @@
       "usage_nested_examples": "user.name、user.address.city",
       "usage_array_stringify": "• 数组值会被转换为 JSON 字符串",
       "usage_csv_escape": "• 自动处理 CSV 特殊字符的转义",
-      "introduction": "JSON转CSV转换器是专业的数据格式转换工具，能够将复杂的JSON数据结构快速转换为标准CSV格式。支持对象数组、嵌套对象扁平化处理，智能识别数据类型并进行格式化输出。无论是数据分析、报表生成还是数据迁移，都能提供高效准确的解决方案。",
+      "introduction": "JSON⇄CSV双向转换器是专业的数据格式转换工具，支持JSON与CSV之间的双向转换。可以将复杂的JSON数据结构快速转换为标准CSV格式，也可以将CSV表格数据解析为JSON对象数组。支持嵌套对象扁平化处理，智能识别数据类型并进行格式化输出。无论是数据分析、报表生成还是数据迁移，都能提供高效准确的解决方案。",
       "features": [
+        "🔄 JSON与CSV双向转换，一键切换转换方向",
         "📊 支持JSON对象数组和单对象转换",
-        "🔄 智能嵌套对象扁平化处理",
+        "🔀 智能嵌套对象扁平化和反扁平化",
         "📋 自动CSV特殊字符转义和格式化",
-        "📈 实时显示行列统计信息",
-        "💾 一键下载CSV文件",
+        "💾 一键下载转换后的文件",
         "🎯 支持复杂数据结构解析",
         "⚡ 高性能处理大型数据集",
         "🔒 客户端处理，数据安全可靠"
@@ -204,25 +212,33 @@
       }
     },
     "json-to-yaml": {
-      "name": "JSON转YAML",
-      "description": "将JSON数据转换为YAML格式",
+      "name": "JSON⇄YAML转换器",
+      "description": "JSON与YAML格式互相转换",
       "placeholder": "请输入JSON数据...",
+      "yaml_placeholder": "请输入YAML数据...",
       "invalid": "无效的JSON格式",
-      "convert": "转换为YAML",
+      "invalid_json": "无效的JSON格式",
+      "invalid_yaml": "无效的YAML格式",
+      "convert": "转换",
       "input_title": "输入 JSON",
       "input_desc": "输入要转换的 JSON 数据",
+      "yaml_input_title": "输入 YAML",
+      "yaml_input_desc": "输入要转换的 YAML 数据",
       "output_title": "输出 YAML",
       "output_desc": "转换后的 YAML 数据",
+      "json_output_title": "输出 JSON",
+      "json_output_desc": "转换后的 JSON 数据",
       "output_placeholder": "转换后的 YAML 将显示在这里...",
-      "introduction": "JSON转YAML转换器是专为配置文件管理和数据交换设计的格式转换工具。能够将JSON数据结构无损转换为YAML格式，支持复杂嵌套对象、数组结构，自动生成具有良好缩进的可读性YAML输出。适用于DevOps、配置管理、API文档等多种场景。",
+      "json_output_placeholder": "转换后的 JSON 将显示在这里...",
+      "introduction": "JSON⇄YAML双向转换器是专为配置文件管理和数据交换设计的格式转换工具。支持JSON与YAML格式之间的无损双向转换，支持复杂嵌套对象、数组结构，自动生成具有良好缩进的输出。适用于DevOps、配置管理、API文档等多种场景。",
       "features": [
-        "🔄 无损JSON到YAML格式转换",
-        "📝 自动生成标准YAML缩进格式",
+        "🔄 JSON与YAML双向转换，一键切换转换方向",
+        "📝 自动生成标准格式缩进",
         "🎯 支持复杂嵌套对象和数组",
         "📋 保持数据类型和结构完整性",
-        "💾 快速下载YAML配置文件",
+        "💾 快速下载转换后的文件",
         "⚡ 实时转换，即时预览效果",
-        "🎨 语法高亮，提升可读性",
+        "🎨 支持亮色/暗色主题",
         "🔒 本地处理，确保数据安全"
       ],
       "faq": [
@@ -250,30 +266,41 @@
       }
     },
     "json-to-xml": {
-      "name": "JSON转XML",
-      "description": "将JSON数据转换为XML格式",
+      "name": "JSON⇄XML转换器",
+      "description": "JSON与XML格式互相转换",
       "placeholder": "请输入JSON数据...",
       "invalid": "无效的JSON格式",
-      "convert_button": "转换为XML",
+      "convert_button": "转换",
+      "input_title": "输入 JSON",
+      "input_desc": "输入要转换的 JSON 数据",
+      "xml_input_title": "输入 XML",
+      "xml_input_desc": "输入要转换的 XML 数据",
+      "output_title": "输出 XML",
+      "output_desc": "转换后的 XML 数据",
+      "json_output_title": "输出 JSON",
+      "json_output_desc": "转换后的 JSON 数据",
       "input_placeholder": "请输入要转换的JSON数据...",
+      "xml_input_placeholder": "请输入要转换的XML数据...",
       "output_placeholder": "转换后的XML将显示在这里...",
+      "json_output_placeholder": "转换后的JSON将显示在这里...",
       "root_element": "根元素名称",
       "errors": {
-        "empty_input": "请输入JSON数据",
-        "invalid_json": "输入的JSON格式无效"
+        "empty_input": "请输入数据",
+        "invalid_json": "输入的JSON格式无效",
+        "invalid_xml": "输入的XML格式无效"
       },
       "success": "转换成功",
       "conversion_complete": "JSON转XML转换完成",
       "xml_copied": "XML数据已复制到剪贴板",
       "xml_downloaded": "XML文件已下载",
-      "introduction": "JSON转XML转换器是专业的数据格式转换工具，实现JSON与XML之间的精确转换。XML(可扩展标记语言)广泛应用于Web服务、配置文件、数据交换等场景，具有良好的可读性和结构化特性。本工具支持自定义根元素名称，智能处理嵌套对象和数组结构，确保转换后的XML格式规范、可读性强，满足各种数据集成和系统间通信需求。",
+      "introduction": "JSON⇄XML双向转换器是专业的数据格式转换工具，实现JSON与XML之间的精确双向转换。XML(可扩展标记语言)广泛应用于Web服务、配置文件、数据交换等场景，具有良好的可读性和结构化特性。支持自定义根元素名称，智能处理嵌套对象和数组结构，确保转换后的格式规范、可读性强，满足各种数据集成和系统间通信需求。",
       "features": [
-        "🔄 JSON到XML的智能转换，保持数据结构完整性",
-        "🏷️ 自定义XML根元素名称，满足不同系统要求",
-        "🎯 智能处理嵌套对象和数组，转换为合理的XML层级",
-        "⚡ 实时转换处理，输入即时生成XML结果",
-        "📋 一键复制XML代码，便于集成开发",
-        "💾 支持XML文件下载，方便数据保存和传输",
+        "🔄 JSON与XML双向转换，一键切换转换方向",
+        "🏷️ JSON转XML时可自定义根元素名称",
+        "🎯 智能处理嵌套对象和数组结构",
+        "⚡ 实时转换处理，输入即时生成结果",
+        "📋 一键复制转换结果，便于集成开发",
+        "💾 支持文件下载，方便数据保存和传输",
         "🔒 本地处理保护隐私，数据不会上传到服务器",
         "📱 响应式设计，支持移动端和桌面端操作"
       ],
